# hmi-spec-kit

./: package.json  spec-driven.md
docs/: index.md  language-selector.md  theme-system.md  use-cases.md  user-stories.md
docs/cem/: CEM-Structure.md  Equipment.md  IO.md  Module.md  Unit.md
docs/components/Button/: DD.md  HLD.md  example-code.md
docs/components/Table/: DD.md  HLD.md  example-code.md
docs/standards/: CI-CD.md  Integration.md  UXUI.md
docs/subpages/Operation/: DD.md  HLD.md
docs/widgets/Gauges/: DD.md  HLD.md  README.md  example-code.md  use-cases.md  user-stories.md
docs/widgets/MonitoringPanel/: DD.md  HLD.md  example-code.md
frontend/: GAUGES_POC_README.md  NEW_GAUGE_TYPES.md  OPERATING_MODE_FEATURE.md  PRESSURE_COMPACT_GAUGE.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  EmptySubpage.jsx  RolePermissionSettings.jsx
frontend/src/components/: ControlPanel.css  ControlPanel.jsx  DataRunning.css  DataRunning.jsx  Gauges.css  Gauges.jsx  GaugesDemo.css  GaugesDemo.jsx  HamburgerMenu.css  HamburgerMenu.jsx  LanguageSelector.css  RealTimeMonitoring.css  RealTimeMonitoring.jsx  SettingsDialog.jsx  ThemeSelector.css
frontend/src/config/: roles.json
frontend/src/context/: LanguageContext.jsx  ThemeContext.jsx
src/backend/: CMakeList.txt  CMakeLists.txt  main.cpp  server
src/components/: Button-examples.js  Button.css  Button.jsx  ControlPanel.css  LanguageSelector.jsx  ThemeSelector.jsx
src/config/: languages.json  roles.json
src/context/: ThemeContext.jsx
templates/: spec-template.md
(+6 files in other folders)
